--- a/src/components/dashboard/category-list.scss
+++ b/src/components/dashboard/category-list.scss
@@ -12,6 +12,11 @@
   
 
 .category-list-row {
-    border-bottom: 1px solid #dddcdc; /* Satır aralarına çizgi ekleyen CSS */
+    border-bottom: 1px solid #dddcdc; 
+  }
+  .category-icon {
+    font-size: 28px; 
+    margin-right: 20px; 
+    color:rgb(250, 143, 2);
   }
   
